{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 524,
  "lineage": "1d1aff4c-1cf2-33a7-c7b8-2c17664f7ff9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee93d951faad4c56",
            "domain": "vpc",
            "id": "eipalloc-0ee93d951faad4c56",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-235-12-201.compute-1.amazonaws.com",
            "public_ip": "3.235.12.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078856657fd2771dc",
            "domain": "vpc",
            "id": "eipalloc-078856657fd2771dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-209-0-243.compute-1.amazonaws.com",
            "public_ip": "54.209.0.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-0b9db74deaf21af05",
            "id": "igw-0b9db74deaf21af05",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc a"
            },
            "tags_all": {
              "Name": "ig-vpc a"
            },
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-02873a0e55b9e9168",
            "id": "igw-02873a0e55b9e9168",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc b"
            },
            "tags_all": {
              "Name": "ig-vpc b"
            },
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-a-nat-gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee93d951faad4c56",
            "connectivity_type": "public",
            "id": "nat-0ba037125a66b9843",
            "network_interface_id": "eni-0d27f160b8296f72e",
            "private_ip": "10.0.1.161",
            "public_ip": "3.235.12.201",
            "subnet_id": "subnet-02109acb72d779b62",
            "tags": {
              "Name": "vpc-a-nat-gw1"
            },
            "tags_all": {
              "Name": "vpc-a-nat-gw1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-b-nat-gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078856657fd2771dc",
            "connectivity_type": "public",
            "id": "nat-0f91dcbdbb0dc876c",
            "network_interface_id": "eni-00ff4f781bfd0052e",
            "private_ip": "10.1.1.238",
            "public_ip": "54.209.0.243",
            "subnet_id": "subnet-036bcccb5f0ad7c06",
            "tags": {
              "Name": "vpc-b-nat-gw2"
            },
            "tags_all": {
              "Name": "vpc-b-nat-gw2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0daadf7c3e4740a2b",
            "id": "rtb-0daadf7c3e4740a2b",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba037125a66b9843",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-1-private"
            },
            "tags_all": {
              "Name": "vpc-a-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0bcfe8b145c915e18",
            "id": "rtb-0bcfe8b145c915e18",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba037125a66b9843",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-2-private"
            },
            "tags_all": {
              "Name": "vpc-a-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0574aefa22cb8824e",
            "id": "rtb-0574aefa22cb8824e",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9db74deaf21af05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-public"
            },
            "tags_all": {
              "Name": "vpc-a-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0497f0d84a3812a1e",
            "id": "rtb-0497f0d84a3812a1e",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f91dcbdbb0dc876c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-1-private"
            },
            "tags_all": {
              "Name": "vpc-b-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0bc53acc6cc203ccb",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f91dcbdbb0dc876c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-2-private"
            },
            "tags_all": {
              "Name": "vpc-b-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-03769465eee4e82b9",
            "id": "rtb-03769465eee4e82b9",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02873a0e55b9e9168",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-public"
            },
            "tags_all": {
              "Name": "vpc-b-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0487ed485865a105c",
            "route_table_id": "rtb-0daadf7c3e4740a2b",
            "subnet_id": "subnet-0953116e67716ffa9"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-1-private",
            "aws_subnet.private_subnet_a_1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203e9d5f811f898c",
            "route_table_id": "rtb-0bcfe8b145c915e18",
            "subnet_id": "subnet-0aa344a190f5c41b0"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-2-private",
            "aws_subnet.private_subnet_a_2",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe61c2e7722d100",
            "route_table_id": "rtb-0497f0d84a3812a1e",
            "subnet_id": "subnet-0a6ec7bbb2c49c098"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_route_table.vpc-b-1-private",
            "aws_subnet.private_subnet_b_1",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c7ecb803aec967d",
            "route_table_id": "rtb-0574aefa22cb8824e",
            "subnet_id": "subnet-02109acb72d779b62"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_route_table.vpc-a-public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018de979cac892a35",
            "route_table_id": "rtb-03769465eee4e82b9",
            "subnet_id": "subnet-036bcccb5f0ad7c06"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_route_table.vpc-b-public",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0953116e67716ffa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0953116e67716ffa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 1"
            },
            "tags_all": {
              "Name": "Private Subnet A 1"
            },
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0aa344a190f5c41b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa344a190f5c41b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 2"
            },
            "tags_all": {
              "Name": "Private Subnet A 2"
            },
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0a6ec7bbb2c49c098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ec7bbb2c49c098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 1"
            },
            "tags_all": {
              "Name": "Private Subnet B 1"
            },
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-05675fe6f61f9adca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05675fe6f61f9adca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 2"
            },
            "tags_all": {
              "Name": "Private Subnet B 2"
            },
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-02109acb72d779b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02109acb72d779b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet A"
            },
            "tags_all": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-036bcccb5f0ad7c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036bcccb5f0ad7c06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet B"
            },
            "tags_all": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-046620c25e13bd3ac"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-0f5e53add8852222d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01139c293ccf0e097",
            "default_route_table_id": "rtb-09c028ce392c4ec46",
            "default_security_group_id": "sg-0173251021e0e2185",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5e53add8852222d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c028ce392c4ec46",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-046620c25e13bd3ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-016536185fa043fe7",
            "default_route_table_id": "rtb-022e33031f1743e2e",
            "default_security_group_id": "sg-02f068c8361a1b8ec",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046620c25e13bd3ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022e33031f1743e2e",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-02e790f04b1e4aac9",
            "peer_owner_id": "400926585409",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-046620c25e13bd3ac",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "tags_all": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "vpc_id": "vpc-0f5e53add8852222d"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    }
  ]
}